--- a/gb/21/2/12/n12750040.md
+++ b/gb/21/2/12/n12750040.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bbwpee3877/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/bbwpee3877/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bbwpee3877/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bbwpee3877/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bbwpee3877/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bbwpee3877/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bbwpee3877/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共滥用刷脸引反感 大陆民众被变“透明人”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-689545008-600x400.jpg" />
 <h6>中共人脸识别技术的应用正在把大陆民众变成“透明人”。图为资料图。(STR/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年02月13日讯】（大纪元记者张玉洁综合报导）中共把<ahref="https://github.com/bbwpee3877/djy/blob/master/gb/tag/%E5%88%B7%E8%84%B8.md#1">刷脸</a>监控遍布大陆各个角落、各个领域，越来越引发大陆民众反感。有分析人士表示，中共<ahref="https://github.com/bbwpee3877/djy/blob/master/gb/tag/%E4%BA%BA%E8%84%B8%E8%AF%86%E5%88%AB.md#1">人脸识别</a>技术的应用正在把大陆民众变成“透明人”。</p>
-<p>新京智库近日发布的一项由一千五百多人参加的不记名民调显示，87.46%受访者反对商业区使用<ahref="https://github.com/bbwpee3877/djy/blob/master/gb/tag/%E4%BA%BA%E8%84%B8%E8%AF%86%E5%88%AB.md#1">人脸识别</a>技术；68.64%受访者认为，进出居民区不应使用这种技术；43%受访者不希望在医院、学校以及办公室使用这种技术。</p>
+	<p>【大纪元2021年02月13日讯】（大纪元记者张玉洁综合报导）中共把<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%88%B7%E8%84%B8.md#1">刷脸</a>监控遍布大陆各个角落、各个领域，越来越引发大陆民众反感。有分析人士表示，中共<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%BA%E8%84%B8%E8%AF%86%E5%88%AB.md#1">人脸识别</a>技术的应用正在把大陆民众变成“透明人”。</p>
+<p>新京智库近日发布的一项由一千五百多人参加的不记名民调显示，87.46%受访者反对商业区使用<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%BA%E8%84%B8%E8%AF%86%E5%88%AB.md#1">人脸识别</a>技术；68.64%受访者认为，进出居民区不应使用这种技术；43%受访者不希望在医院、学校以及办公室使用这种技术。</p>
 <p>民调结果还显示，96.14%受访者担心个人信息会被泄露；51.4%受访者表示，他们是被迫无奈使用人脸识别技术的。</p>
-<h2>民众反感<ahref="https://github.com/bbwpee3877/djy/blob/master/gb/tag/%E5%88%B7%E8%84%B8.md#1">刷脸</a> 担忧安全</h2>
+<h2>民众反感<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%88%B7%E8%84%B8.md#1">刷脸</a> 担忧安全</h2>
 <p>《美国之音》2月12日引述武汉市林先生的话表示：“我每次出门到景区，就有那种机器出现——人脸识别机器。有无必要？对犯罪分子有很大作用，对于普通的公民的隐私方面有点不妥。”</p>
 <p>上海市李先生说：“现在是公园也搞人脸识别，不让随便进去；使用人脸识别的商场，管理人员也不让你进去。另外，科技网平台、互联网金融，人脸识别技术被滥用会更加可怕，这是一个涉及金融安全的问题。”</p>
 <p>李先生反对大陆这种人脸识别泛滥的现象，民众到处刷脸，留下人脸信息，但并不能确保监控和管理这些信息的人是安全的。</p>
@@ -27,41 +27,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bbwpee3877/djy/blob/master/gb/19/12/1/n11693248.md#1">中共监控升级！12月起需先“刷脸”注册新手机</a></li>
-<li><a href="https://github.com/bbwpee3877/djy/blob/master/gb/20/6/21/n12202435.md#1">广西业主卖房“刷脸” 次日房子被“过户”</a></li>
-<li><a href="https://github.com/bbwpee3877/djy/blob/master/gb/20/9/22/n12421565.md#1">民众顾虑个资泄露 刷脸支付在大陆难流行</a></li>
-<li><a href="https://github.com/bbwpee3877/djy/blob/master/gb/20/9/23/n12425338.md#1">【独家】打造监控铁幕 中共偷偷“刷脸”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/12/1/n11693248.md#1">中共监控升级！12月起需先“刷脸”注册新手机</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/21/n12202435.md#1">广西业主卖房“刷脸” 次日房子被“过户”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/22/n12421565.md#1">民众顾虑个资泄露 刷脸支付在大陆难流行</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/23/n12425338.md#1">【独家】打造监控铁幕 中共偷偷“刷脸”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/bbwpee3877/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/20/n10863025.md#1" target="_blank">晓明：永难忘怀的血泪史</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/17/12/29/n10005600.md#1">【西游义趣】之一：神秘的樵夫</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12745735.md#1">【解密时分】教宗预言：末日审判将近？</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/8/n12741216.md#1">【解密时分】诺查丹玛斯预言苏共或中共政权？</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/5/n12734415.md#1">中国新年：回溯辛丑三百年 危难中寻曙光</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/6/n12737563.md#1">【远见快评】神秘预言4度惊现正史 预告霸王出</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/12/n12748307.md#1">【十字路口】一本奇书 精准预言九个秘密</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/12/n12749457.md#1">【直播】弹劾审讯第4天 川普律师团队抗辩</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/12/n12749482.md#1">大陆民众给法轮功创始人拜年 送上新春祝福</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12745919.md#1">格雷厄姆告诉川普：弹劾案“结束了”</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12745823.md#1">南太平洋发生7.7级地震 海啸威胁新西兰等岛国</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12744073.md#1">【独家】国防密件泄中共军机关键材料窘况</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12745615.md#1">赵丽颖新剧杀青照曝光 瘦的令人震惊</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12745090.md#1">31组艺人接力表演 台湾《红白》陪观众围炉</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/11/n12747753.md#1">林青霞仨女新年收特大红包 金额曝光惊呆网友</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12745837.md#1">61岁钟楚红晒照庆生 网友大赞冻龄外表</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/9/n12743479.md#1">69岁吴孟达被爆心脏病发 片场捂胸表情痛苦</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12744061.md#1">中医师推荐养生零食 第1名降三高 糖尿病也能吃</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12744419.md#1">俄男在结冰湖面滑冰 传来异世界的声音</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12744939.md#1">坚果热量排名 哪个最高？3类人少吃坚果</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/10/n12744679.md#1">男子拍片记录他孵蛋并照顾小鹦鹉 千万人看</a></li>
-<li><a href="https://github.com/sxkylg3127/djy/blob/master/gb/21/2/11/n12746195.md#1">【重播】2021年不想犯太岁 几件事千万别做</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bbwpee3877/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bbwpee3877/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/12/n12750040.htm">中共滥用刷脸引反感 大陆民众被变“透明人”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/12/n12750040.htm">中共滥用刷脸引反感 大陆民众被变“透明人”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bbwpee3877/djy/blob/master/gb/21/2/12/n12750040.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bbwpee3877/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bbwpee3877/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bbwpee3877/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bbwpee3877/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbwpee3877/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/2/12/n12750040.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
